✨ LiveComponent de productos
se realiza ejemplo base para poder explicar el ciclo de vida de LiveComponent

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,1 +1,9 @@
 {% extends 'base.html.twig' %}
+
+{% block title %}Búsqueda de Productos{% endblock %}
+
+{% block body %}
+    <div class="container">
+        {{ component('ProductSearchComponent') }}
+    </div>
+{% endblock %}
